<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.OnBoarding3">

    <ImageView
        android:id="@+id/iv_onBoard_3"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_onBoard_title_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/onBoardingTitle3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_onBoard_3" />

    <TextView
        android:id="@+id/tv_onBoard_des_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/onBoardingDes3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_onBoard_title_3" />

    <TextView
        android:id="@+id/tv_onBoard_des_3_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_onBoard_des_3" />

    <Button
        android:id="@+id/btn_onBoard3_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/as_student"
        app:layout_constraintBottom_toBottomOf="@+id/btn_onBoard3_teacher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_onBoard3_teacher"
        app:layout_constraintTop_toTopOf="@+id/btn_onBoard3_teacher" />

    <Button
        android:id="@+id/btn_onBoard3_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/as_teacher"
        app:layout_constraintEnd_toStartOf="@+id/btn_onBoard3_student"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_onBoard_des_3_login" />

    <Button
        android:id="@+id/btn_onBoard3_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintEnd_toEndOf="@+id/btn_onBoard3_student"
        app:layout_constraintStart_toStartOf="@+id/btn_onBoard3_teacher"
        app:layout_constraintTop_toBottomOf="@+id/btn_onBoard3_teacher" />
</androidx.constraintlayout.widget.ConstraintLayout>